# aoc-2022

./: AOC.cabal  CHANGELOG.md
src/Day01A/: Calories.hs
src/Day02/: RockPaperScissors.hs
src/Day03/: Rucksack.hs
src/Day04/: Ranges.hs
src/Day05/: Crates.hs
src/Day06/: Packets.hs
