cabal-version:      2.4
name:               AOC
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Connor Davis
maintainer:         17688291+PoisonPhang@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                      Day01A.Calories
                      Day02.RockPaperScissors
                      Day03.Rucksack
                      Day04.Ranges
                      Day05.Crates

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0 ,
                      text ^>=1.2.5.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable AOC
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        AOC

    hs-source-dirs:   app
    default-language: Haskell2010
